[package]
name = "rl_ball_sym"
version = "4.0.0"
authors = ["VirxEC"]
edition = "2021"
description = "rl_ball_sym is a Rust implementation of Rocket League's ball physics"
readme = "README.md"
repository = "https://github.com/VirxEC/rl_ball_sym"
license = "MIT"
keywords = ["rocket-league", "rlbot", "physics", "simulation"]
categories = ["science", "simulation", "mathematics"]
include = ["src/", "assets/"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dev-dependencies]
rand = "0.8"
once_cell = "1.17.1"
criterion = { version = "0.5.0", features = ["html_reports"] }
serde_json = "1.0.107"
colored = "2.0.4"

[dependencies]
byteorder = "1"
glam = "0.24.0"
radsort = "0.1"
combo_vec = { version = "0.7.1", default_features = false }
include-flate = { version = "0.3.0", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }

[features]
default = ["standard", "hoops", "dropshot", "throwback"]
compression = ["include-flate"]
standard = []
hoops = []
dropshot = []
throwback = []
serde = ["dep:serde", "glam/serde"]

[profile.release-with-debug]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[[example]]
name = "accuracy"
required-features = ["serde"]
