[package]
name = "rl_ball_sym"
version = "5.0.0"
authors = ["VirxEC"]
edition = "2024"
description = "rl_ball_sym is a Rust implementation of Rocket League's ball physics"
readme = "README.md"
repository = "https://github.com/VirxEC/rl_ball_sym"
license = "MIT"
keywords = ["rocket-league", "rlbot", "physics", "simulation"]
categories = ["science", "simulation", "mathematics"]
include = ["src/", "assets/"]
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "warn"

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.5.0", features = ["html_reports"] }
serde_json = "1.0.107"
colored = "3.0.0"
rocketsim_rs = { version = "0.34.0", features = ["glam"] }

[dependencies]
byteorder = "1"
glam = "0.30.0"
radsort = "0.1"
arrayvec = "0.7.6"
include-flate = { version = "0.3.0", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }

[features]
default = ["heatseeker", "hoops", "dropshot", "throwback"]
compression = ["include-flate"]
standard = []
hoops = []
dropshot = []
throwback = []
heatseeker = ["standard"]
serde = ["dep:serde", "glam/serde"]

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[package.metadata.docs.rs]
all-features = true

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[[example]]
name = "accuracy"
required-features = ["serde"]
